fix+feat(web): move add people from more dropdown to dialog header, make call button icon smaller

--- a/actor-sdk/sdk-web/src/styles/call/_smart-button.scss
+++ b/actor-sdk/sdk-web/src/styles/call/_smart-button.scss
@@ -3,6 +3,7 @@
 
   border-radius: 100px !important;
   .material-icons {
+    font-size: 22px;
     transition: transform ($default-transition-duration * 2) $default-transition-duration $default-transition-timing;
   }
   span {
